fix: Guest and Verified Indicator overlap

--- a/src/style/components/list/participant-item.less
+++ b/src/style/components/list/participant-item.less
@@ -63,7 +63,8 @@
   .mic-on-icon,
   .participant-mic-on-icon,
   .partner-icon svg,
-  .screenshare-icon {
+  .screenshare-icon,
+  .verified-icon svg {
     margin-left: 8px;
     fill: currentColor;
   }
